--- a/index.html
+++ b/index.html
@@ -409,11 +409,15 @@
 
         <h1>@ JIVROM Technologies Pvt Ltd. All Rights Reserved</h1>
 
-        <!-- <div class="icons">
+        <div class="icons">
             <a href="#" class="fab fa-facebook-f"></a>
             <a href="#" class="fab fa-twitter"></a>
-            <a href="#" class="fab fa-instagram"></a>
-        </div> -->
+            <a href="" class="fab fa-instagram"></a>
+           <a href="https://www.linkedin.com/company/jivrom-technologies/"  class="fab fa-linkedin"  style="font-size:19px; color: #fff;" ></a>
+            <a href="mailto:info@jivrom.com" class="fa fa-envelope"  style="font-size:19px; color: #fff;"></a>
+            <a href="tel:+917356619429" class="	fa fa-phone  fa-flip-horizontal" style="font-size:19px; color: #fff;"></a>
+           
+        </div> 
 
     </section>
 
