--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" type="image/x-icon" href="./assets/img/LOGO.png">
     <!-- font awesome file link  -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css">
-
+    <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css"> -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <!-- custom css file link  -->
     <link rel="stylesheet" href="./assets/css/style.css">
 
@@ -410,12 +410,12 @@
         <h1>@ JIVROM Technologies Pvt Ltd. All Rights Reserved</h1>
 
         <div class="icons">
-            <a href="#" class="fab fa-facebook-f"></a>
-            <a href="#" class="fab fa-twitter"></a>
-            <a href="" class="fab fa-instagram"></a>
-           <a href="https://www.linkedin.com/company/jivrom-technologies/"  class="fab fa-linkedin"  style="font-size:19px; color: #fff;" ></a>
-            <a href="mailto:info@jivrom.com" class="fa fa-envelope"  style="font-size:19px; color: #fff;"></a>
-            <a href="tel:+917356619429" class="	fa fa-phone  fa-flip-horizontal" style="font-size:19px; color: #fff;"></a>
+            <a href="#" class="fab fa-facebook-f fa-flip"style="--fa-animation-duration: 3s;"></a>
+            <a href="#" class="fab fa-twitter fa-flip "style="--fa-animation-duration: 3s;"></a>
+            <a href="" class="fab fa-instagram fa-flip" style="--fa-animation-duration: 3s;"></a>
+           <a href="https://www.linkedin.com/company/jivrom-technologies/"  class="fab fa-linkedin fa-flip"  style="font-size:19px; color: #fff; --fa-animation-duration: 3s;" ></a>
+            <a href="mailto:info@jivrom.com" class="fa-solid fa-envelope fa-bounce"  style="font-size:19px; color: #fff;"></a>
+            <a href="tel:+917356619429" class="	fa fa-phone  fa-shake" style="font-size:19px; color: #fff;   "></a>
            
         </div> 
 
